--- a/Stockers/app/src/main/res/layout/activity_show_stock.xml
+++ b/Stockers/app/src/main/res/layout/activity_show_stock.xml
@@ -13,8 +13,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:paddingLeft="4dp"
-        style="@style/word_title">
+        android:paddingLeft="4dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
