--- a/Stockers/app/src/main/res/layout/recyclerview_ticker_item.xml
+++ b/Stockers/app/src/main/res/layout/recyclerview_ticker_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/view"
     android:layout_gravity="center|top">
-
     <TextView
         android:id="@+id/tickerSymbol"
         android:layout_width="match_parent"
@@ -13,4 +12,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/sub"/>
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/search"/>
 </LinearLayout>
