--- a/Stockers/app/src/main/res/layout/activity_main.xml
+++ b/Stockers/app/src/main/res/layout/activity_main.xml
@@ -1,194 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LaunchNote"
-        android:onClick="goToNoteActivity"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="100dp"
+        android:layout_marginBottom="472dp"
         android:gravity="center"
-        android:orientation="vertical"
-        android:padding="20dp">
-
-        <ImageButton
-            android:id="@+id/logoBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:background="@drawable/round_icon"
-            android:padding="10dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher_background" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <ImageButton
-                android:id="@+id/foreignExchangeBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:onClick="foreignExchangeClick"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher_background" />
-
-            <ImageButton
-                android:id="@+id/financialHintsBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:onClick="financialHintsClick"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher_background" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <ImageButton
-                android:id="@+id/stockQuoteBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:onClick="stockQuoteClick"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher_background" />
-
-            <ImageButton
-                android:id="@+id/notesBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:onClick="notesClick"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher_background" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <ImageButton
-                android:id="@+id/loanCalculatorBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:onClick="loanCalculatorClick"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher_background" />
-
-            <ImageButton
-                android:id="@+id/portfolioBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:onClick="portfolioClick"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher_background" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_weight="2"
         android:orientation="horizontal"
-        android:padding="10dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
-        <ImageButton
-            android:id="@+id/messageBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+        <ImageView
+            android:id="@+id/logoBtn"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
-            android:onClick="messageClick"
-            android:padding="10dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher_background" />
-
+            android:src="@drawable/ic_stockers_logo_textless"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.058" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+
+    <ImageView
+        android:id="@+id/foreignExchangeBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:clickable="true"
+        android:onClick="foreignExchangeClick"
+        android:src="@drawable/ic_currency_exchange_icon"
+        app:layout_constraintEnd_toStartOf="@+id/financialHintsBtn"
+        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="141dp" />
+
+    <ImageView
+        android:id="@+id/financialHintsBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="60dp"
+        android:clickable="true"
+        android:onClick="financialHintsClick"
+        android:src="@drawable/ic_hint_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="141dp" />
+
+    <ImageView
+        android:id="@+id/stockQuoteBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:clickable="true"
+        android:onClick="stockQuoteClick"
+        android:src="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="66dp"
+        tools:layout_editor_absoluteY="252dp" />
+
+    <ImageView
+        android:id="@+id/notesBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:clickable="true"
+        android:onClick="notesClick"
+        android:src="@drawable/ic_notes_icon"
+        tools:layout_editor_absoluteX="224dp"
+        tools:layout_editor_absoluteY="252dp" />
+
+    <ImageView
+        android:id="@+id/loanCalculatorBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:clickable="true"
+        android:onClick="loanCalculatorClick"
+        android:src="@drawable/ic_loan_calculator_icon"
+        tools:layout_editor_absoluteX="66dp"
+        tools:layout_editor_absoluteY="381dp" />
+
+    <ImageView
+        android:id="@+id/portfolioBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:clickable="true"
+        android:onClick="portfolioClick"
+        android:src="@drawable/ic_launcher_foreground"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="451dp" />
+
+    <ImageView
+        android:id="@+id/messageBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:adjustViewBounds="true"
+        android:onClick="messageClick"
+        android:padding="10dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_launcher_background"
+        tools:layout_editor_absoluteX="214dp"
+        tools:layout_editor_absoluteY="360dp" />
 
-        <TextView
-            android:id="@+id/usernameLbl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="12"
-            android:text="Name"
-            android:textAlignment="center" />
-    </LinearLayout>
-</LinearLayout>
+    <TextView
+        android:id="@+id/usernameLbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="12"
+        android:text="Name"
+        android:textAlignment="center"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="532dp" />
+
+
+</android.support.constraint.ConstraintLayout>
