--- a/Stockers/app/src/main/res/layout/activity_messaging.xml
+++ b/Stockers/app/src/main/res/layout/activity_messaging.xml
@@ -4,11 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Messaging.Messaging">
-
+    tools:context=".Messaging.NewsArticles">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="FFFFFFFFFFF"/>
+        android:text="@string/newsTitle"
+        android:gravity="center"/>
+
+    <view class="android.support.v7.app.AlertController$RecycleListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </view>
 </android.support.constraint.ConstraintLayout>
