--- a/Stockers/app/src/main/res/layout/activity_article.xml
+++ b/Stockers/app/src/main/res/layout/activity_article.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Messaging.NewsArticles">
+    tools:context=".Messaging.NewsArticles"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -12,8 +13,8 @@
         android:text="@string/newsTitle"
         android:gravity="center"/>
 
-    <view class="android.support.v7.app.AlertController$RecycleListView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/newsList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </view>
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="wrap_content" />
+</LinearLayout>
