Add styling to the note and new note Activities

--- a/Stockers/app/src/main/res/layout/activity_note.xml
+++ b/Stockers/app/src/main/res/layout/activity_note.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Note">
+    tools:context=".Notes.NoteActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray" />
+        android:background="@android:color/holo_purple" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
