--- a/Stockers/app/src/main/res/layout/recyclerview_ticker_item.xml
+++ b/Stockers/app/src/main/res/layout/recyclerview_ticker_item.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/view"
-    android:layout_gravity="center|top">
+    android:id="@+id/view">
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/sub"
-        android:onClick="deleteTicker"/>
+    <ImageButton
+        android:text="@string/search"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/sub"/>
 
     <TextView
         android:id="@+id/tickerSymbol"
         android:layout_width="50dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"/>
 
-    <ImageView
+    <ImageButton
+        android:text="@string/delete"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/search"/>
+        android:id="@+id/search"
+        android:layout_marginLeft="15dp"/>
 </LinearLayout>
