--- a/Stockers/app/src/main/res/layout/activity_article.xml
+++ b/Stockers/app/src/main/res/layout/activity_article.xml
@@ -12,9 +12,29 @@
         android:layout_height="wrap_content"
         android:text="@string/newsTitle"
         android:gravity="center"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/newsList"
+    
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/newsList"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+    </LinearLayout>
 </LinearLayout>
