--- a/Stockers/app/src/main/res/layout/activity_about.xml
+++ b/Stockers/app/src/main/res/layout/activity_about.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="@string/desc_title"
             android:paddingTop="20dp"
-            style="@style/text_style"/>
+            style="@style/purple_text_header"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="@string/why_title"
             android:paddingTop="20dp"
-            style="@style/text_style"/>
+            style="@style/purple_text_header"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="@string/names_title"
             android:paddingTop="20dp"
-            style="@style/text_style"/>
+            style="@style/purple_text_header"/>
 
         <LinearLayout
             android:layout_width="match_parent"
