--- a/Stockers/app/src/main/res/layout/activity_settings.xml
+++ b/Stockers/app/src/main/res/layout/activity_settings.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/settings_title"
-            style="@style/text_style"
+            style="@style/purple_text_header"
             android:layout_gravity="center"/>
         <!-- actual data -->
         <TextView
