--- a/Stockers/app/src/main/res/layout/activity_show_stock.xml
+++ b/Stockers/app/src/main/res/layout/activity_show_stock.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/ticker"
-            style="@style/text_style"
+            style="@style/purple_text_header"
             android:layout_gravity="center"/>
         <!-- actual data -->
         <TextView
