--- a/Stockers/app/src/main/res/values/header_style.xml
+++ b/Stockers/app/src/main/res/values/header_style.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="text_style" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="purple_text_header" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:layout_gravity">center</item>
         <item name="android:fontFamily">casual</item>
         <item name="android:textSize">30sp</item>
