--- a/Stockers/app/src/main/res/values/styles.xml
+++ b/Stockers/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme"  parent="Theme.AppCompat.Light.DarkActionBar"> <!--ask todo -->
+    <style name="AppTheme"  parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">20sp</item>
 
     </style>
 
@@ -16,7 +16,6 @@
     https://codelabs.developers.google.com/codelabs/android-room-with-a-view/#9
     -->
     <style name="word_title"  parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:textSize">24sp</item>
         <item name="android:layout_margin">6dp</item>
         <item name="android:paddingLeft">8dp</item>
     </style>
