--- a/Stockers/app/src/main/res/layout/activity_main.xml
+++ b/Stockers/app/src/main/res/layout/activity_main.xml
@@ -1,127 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:theme="@style/AppTheme"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginBottom="472dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp">
-
-        <ImageView
-            android:id="@+id/logoBtn"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:src="@drawable/ic_stockers_logo_textless"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.058" />
-    </LinearLayout>
-
-
-    <ImageView
-        android:id="@+id/foreignExchangeBtn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:clickable="true"
-        android:onClick="foreignExchangeClick"
-        android:src="@drawable/ic_currency_exchange_icon"
-        app:layout_constraintEnd_toStartOf="@+id/financialHintsBtn"
-        app:layout_constraintHorizontal_bias="0.537"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="141dp" />
-
-    <ImageView
-        android:id="@+id/financialHintsBtn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="60dp"
-        android:clickable="true"
-        android:onClick="financialHintsClick"
-        android:src="@drawable/ic_hint_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="141dp" />
-
-    <ImageView
-        android:id="@+id/stockQuoteBtn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:clickable="true"
-        android:onClick="stockQuoteClick"
-        android:src="@drawable/ic_launcher_background"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="252dp" />
-
-    <ImageView
-        android:id="@+id/notesBtn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:clickable="true"
-        android:onClick="notesClick"
-        android:src="@drawable/ic_notes_icon"
-        tools:layout_editor_absoluteX="224dp"
-        tools:layout_editor_absoluteY="252dp" />
-
-    <ImageView
-        android:id="@+id/loanCalculatorBtn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:clickable="true"
-        android:onClick="loanCalculatorClick"
-        android:src="@drawable/ic_loan_calculator_icon"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="381dp" />
-
-    <ImageView
-        android:id="@+id/portfolioBtn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:clickable="true"
-        android:onClick="portfolioClick"
-        android:src="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="451dp" />
-
-    <ImageView
-        android:id="@+id/messageBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:adjustViewBounds="true"
-        android:onClick="messageClick"
-        android:padding="10dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_launcher_background"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="360dp" />
 
     <TextView
         android:id="@+id/usernameLbl"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:ems="12"
-        android:text="Name"
-        android:textAlignment="center"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="532dp" />
+        android:textAlignment="center" />
 
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="488dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="24dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="241dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/foreignExchangeBtn"
+                        android:layout_width="125dp"
+                        android:layout_height="125dp"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:onClick="foreignExchangeClick"
+                        android:src="@drawable/ic_currency_exchange_icon" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/financialHintsBtn"
+                        android:layout_width="125dp"
+                        android:layout_height="125dp"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:onClick="financialHintsClick"
+                        android:src="@drawable/ic_hint_icon" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="187dp"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/notesBtn"
+                        android:layout_width="125dp"
+                        android:layout_height="125dp"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:onClick="notesClick"
+                        android:src="@drawable/ic_notes_icon" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/loanCalculatorBtn"
+                        android:layout_width="125dp"
+                        android:layout_height="125dp"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:onClick="loanCalculatorClick"
+                        android:src="@drawable/ic_loan_calculator_icon" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/portfolioBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="125dp"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:onClick="portfolioClick"
+                        android:src="@drawable/ic_loan_calculator_icon" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/BottomToolBar"
+        android:translationZ="10dp">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/stockQuotesBtn"
+                android:layout_width="58dp"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:src="@drawable/ic_launcher_foreground" />
+
+            <ImageView
+                android:id="@+id/logoBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:src="@drawable/ic_stockers_logo_textless" />
+
+            <ImageView
+                android:id="@+id/messageBtn"
+                android:layout_width="58dp"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:src="@drawable/ic_launcher_foreground" />
+
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
+
+</RelativeLayout>
