--- a/Stockers/app/src/main/res/values/styles.xml
+++ b/Stockers/app/src/main/res/values/styles.xml
@@ -3,9 +3,22 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/gray_purple</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/gray_purple</item>
+        <item name="android:colorBackground">@color/background_material_light</item>
+        <item name="android:windowBackground">@color/gainsboro</item>
+        <item name="android:colorForeground">@color/foreground_material_dark</item>
+        <item name="android:colorAccent">@color/gray_purple</item>
+        <item name="android:statusBarColor">@color/gray_purple</item>
+    </style>
+
+
+    <style name="BottomToolBar">
+        <item name="colorPrimary">@color/gray_purple</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/gray_purple</item>
+        <item name="android:background">@color/gray_purple</item>
     </style>
 
     <!-- The default font for RecyclerView items is too small.
