Finish adding the themse to loan and articles

--- a/Stockers/app/src/main/res/layout/activity_article.xml
+++ b/Stockers/app/src/main/res/layout/activity_article.xml
@@ -9,8 +9,13 @@
 
     <TextView
         android:layout_width="match_parent"
+        android:layout_height="10dp" />
+
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/newsTitle"
+        android:textSize="40sp"
         android:gravity="center"/>
     
     <TextView
