--- a/Stockers/app/src/main/res/layout/article_layout.xml
+++ b/Stockers/app/src/main/res/layout/article_layout.xml
@@ -4,12 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginBottom="30dp">
+    android:layout_marginBottom="30dp"
+    android:padding="10dp"
+    android:background="@color/gray_purple">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/title"/>
+        android:id="@+id/title"
+        android:textSize="30sp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -18,5 +21,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/shortDescription"/>
+        android:id="@+id/shortDescription"
+        android:textSize="15sp"/>
 </LinearLayout>
