--- a/Stockers/app/src/main/res/layout/activity_main.xml
+++ b/Stockers/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="488dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="24dp">
@@ -33,49 +33,52 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="241dp"
+                android:layout_height="240dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/foreignExchangeBtn"
                         android:layout_width="125dp"
                         android:layout_height="125dp"
-                        android:layout_weight="1"
+                        android:background="@drawable/round_background"
                         android:clickable="true"
                         android:onClick="foreignExchangeClick"
-                        android:src="@mipmap/ic_currency_exchange_icon" />
-
+                        android:src="@drawable/ic_launcher_foreground_currency_exchange"
+                        android:tint="@color/dark_orange" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/financialHintsBtn"
+                        style="@style/BackgroundImageView"
                         android:layout_width="125dp"
                         android:layout_height="125dp"
-                        android:layout_weight="1"
+                        android:background="@drawable/round_background"
                         android:clickable="true"
                         android:onClick="financialHintsClick"
-                        android:src="@mipmap/ic_hints_icon" />
+                        android:src="@drawable/ic_launcher_foreground_hints"
+                        android:tint="@color/dark_orange" />
                 </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="187dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp">
@@ -84,39 +87,46 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/notesBtn"
+                        style="@style/BackgroundImageView"
                         android:layout_width="125dp"
                         android:layout_height="125dp"
-                        android:layout_weight="1"
+                        android:background="@drawable/round_background"
                         android:clickable="true"
                         android:onClick="notesClick"
-                        android:src="@mipmap/ic_notes_icon" />
+                        android:src="@drawable/ic_launcher_foreground_notes"
+                        android:tint="@color/dark_orange" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/loanCalculatorBtn"
+                        style="@style/BackgroundImageView"
                         android:layout_width="125dp"
                         android:layout_height="125dp"
-                        android:layout_weight="1"
+                        android:background="@drawable/round_background"
                         android:clickable="true"
                         android:onClick="loanCalculatorClick"
-                        android:src="@mipmap/ic_loan_calculator_icon" />
+                        android:src="@drawable/ic_launcher_foreground_loan_calculator"
+                        android:tint="@color/dark_orange" />
                 </LinearLayout>
+
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="270dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:padding="10dp">
@@ -125,17 +135,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/portfolioBtn"
-                        android:layout_width="match_parent"
+                        style="@style/BackgroundImageView"
+                        android:layout_width="125dp"
                         android:layout_height="125dp"
-                        android:layout_weight="1"
+                        android:background="@drawable/round_background"
                         android:clickable="true"
                         android:onClick="portfolioClick"
-                        android:src="@mipmap/ic_loan_calculator_icon_round" />
+                        android:src="@drawable/ic_launcher_foreground_loan_calculator"
+                        android:tint="@color/dark_orange" />
                 </LinearLayout>
+
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
@@ -164,7 +179,7 @@
                 android:layout_height="58dp"
                 android:layout_weight="1"
                 android:clickable="true"
-                android:src="@drawable/ic_launcher_foreground" />
+                android:src="@drawable/ic_launcher_foreground_search" />
 
             <ImageView
                 android:id="@+id/logoBtn"
