--- a/Stockers/app/src/main/res/values/styles.xml
+++ b/Stockers/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme"  parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme"  parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/gray_purple</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -21,6 +21,10 @@
         <item name="android:background">@color/gray_purple</item>
     </style>
 
+
+    <style name="BackgroundImageView">
+        <item name="android:src">@color/orange</item>
+    </style>
     <!-- The default font for RecyclerView items is too small.
     The margin is a simple delimiter between the words.
     Style is based off code from:
