--- a/Stockers/app/src/main/res/values/colors.xml
+++ b/Stockers/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <!--<color name="colorPrimary">#9FA8DA</color>-->
     <color name="colorPrimaryDark">#5C6BC0</color>
     <color name="colorAccent">#4527A0</color>
-    <color name="textColor">#FFE0B2</color>
+    <color name="textColor">#FA8B60</color>
     <color name="buttonLabel">#d3d3d3</color>
     <color name="background_material_light">#dfe2d8</color>
     <color name="secondary_text_default_material_dark">#b3ffffff</color>
