debug validation for already existing values, change colors, chnage icons, add styling , add text in main acitvity under each image, add functionality to all the buttons in main

--- a/Stockers/app/src/main/res/layout/recyclerview_ticker_item.xml
+++ b/Stockers/app/src/main/res/layout/recyclerview_ticker_item.xml
@@ -14,7 +14,8 @@
         android:id="@+id/tickerSymbol"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"/>
+        android:layout_marginLeft="15dp"
+        android:textSize="20dp"/>
 
     <ImageButton
         android:layout_width="40dp"
