--- a/Stockers/app/src/main/res/layout/activity_main.xml
+++ b/Stockers/app/src/main/res/layout/activity_main.xml
@@ -25,16 +25,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="24dp">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/BottomToolBar"
-        android:translationZ="10dp">
-
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,7 +42,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    android:onClick="foreignExchangeClick">
 
                     <ImageView
                         android:id="@+id/foreignExchangeBtn"
@@ -60,9 +51,13 @@
                         android:layout_height="125dp"
                         android:background="@drawable/round_background"
                         android:clickable="true"
-                        android:onClick="foreignExchangeClick"
                         android:src="@drawable/ic_launcher_foreground_currency_exchange"
                         android:tint="@color/dark_orange" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/foreignEx"
+                        style="@style/purple_text_header"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -70,7 +65,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    android:onClick="financialHintsClick">
 
                     <ImageView
                         android:id="@+id/financialHintsBtn"
@@ -79,9 +75,13 @@
                         android:layout_height="125dp"
                         android:background="@drawable/round_background"
                         android:clickable="true"
-                        android:onClick="financialHintsClick"
                         android:src="@drawable/ic_launcher_foreground_hints"
                         android:tint="@color/dark_orange" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/hints"
+                        style="@style/purple_text_header"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -98,7 +98,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    android:onClick="notesClick">
 
                     <ImageView
                         android:id="@+id/notesBtn"
@@ -107,9 +108,13 @@
                         android:layout_height="125dp"
                         android:background="@drawable/round_background"
                         android:clickable="true"
-                        android:onClick="notesClick"
                         android:src="@drawable/ic_launcher_foreground_notes"
                         android:tint="@color/dark_orange" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/notes"
+                        style="@style/purple_text_header"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -117,7 +122,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    android:onClick="loanCalculatorClick">
 
                     <ImageView
                         android:id="@+id/loanCalculatorBtn"
@@ -126,9 +132,14 @@
                         android:layout_height="125dp"
                         android:background="@drawable/round_background"
                         android:clickable="true"
-                        android:onClick="loanCalculatorClick"
                         android:src="@drawable/ic_launcher_foreground_loan_calculator"
                         android:tint="@color/dark_orange" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/loanCal"
+                        style="@style/purple_text_header"/>
                 </LinearLayout>
 
 
@@ -139,14 +150,15 @@
                 android:layout_height="270dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:onClick="portfolioClick">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/portfolioBtn"
@@ -155,9 +167,14 @@
                         android:layout_height="125dp"
                         android:background="@drawable/round_background"
                         android:clickable="true"
-                        android:onClick="portfolioClick"
                         android:src="@drawable/ic_launcher_foreground_loan_calculator"
-                        android:tint="@color/dark_orange" />
+                        android:tint="@color/dark_orange"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/portfolio"
+                        style="@style/purple_text_header"/>/>
                 </LinearLayout>
 
 
@@ -189,6 +206,7 @@
                 android:layout_height="58dp"
                 android:layout_weight="1"
                 android:clickable="true"
+                android:onClick="stockQuoteClick"
                 android:src="@drawable/ic_launcher_foreground_search" />
 
             <ImageView
@@ -197,6 +215,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:clickable="true"
+                android:onClick="onClickAboutPage"
                 android:src="@mipmap/ic_stockers_textless_logo_round" />
 
             <ImageView
