Fixed new main layout to match on multiple screens

--- a/Stockers/app/src/main/res/layout/activity_main.xml
+++ b/Stockers/app/src/main/res/layout/activity_main.xml
@@ -22,75 +22,84 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="24dp">
+        android:layout_alignParentTop="true">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
+                    android:clickable="true"
+                    android:gravity="center_horizontal"
+                    android:onClick="foreignExchangeClick"
                     android:orientation="vertical"
-                    android:onClick="foreignExchangeClick">
+                    android:padding="20dp">
 
                     <ImageView
                         android:id="@+id/foreignExchangeBtn"
                         android:layout_width="125dp"
                         android:layout_height="125dp"
                         android:background="@drawable/round_background"
-                        android:clickable="true"
                         android:src="@drawable/ic_launcher_foreground_currency_exchange"
                         android:tint="@color/dark_orange"
-                        android:translationZ="20dp"/>
+                        android:translationZ="20dp" />
+
                     <TextView
-                        android:layout_width="wrap_content"
+                        style="@style/purple_text_header"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="19dp"
+                        android:minHeight="125dp"
                         android:text="@string/foreignEx"
-                        style="@style/purple_text_header"/>
+                        android:textAlignment="center" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center"
+                    android:clickable="true"
+                    android:gravity="center_horizontal"
+                    android:onClick="financialHintsClick"
                     android:orientation="vertical"
-                    android:onClick="financialHintsClick">
+                    android:padding="20dp">
 
                     <ImageView
                         android:id="@+id/financialHintsBtn"
                         android:layout_width="125dp"
                         android:layout_height="125dp"
                         android:background="@drawable/round_background"
-                        android:clickable="true"
                         android:src="@drawable/ic_launcher_foreground_hints"
                         android:tint="@color/dark_orange"
                         android:translationZ="20dp" />
+
                     <TextView
-                        android:layout_width="wrap_content"
+                        style="@style/purple_text_header"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="19dp"
+                        android:minHeight="125dp"
                         android:text="@string/hints"
-                        style="@style/purple_text_header"/>
+                        android:textAlignment="center" />
                 </LinearLayout>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:orientation="horizontal"
                 android:padding="10dp">
 
@@ -98,36 +107,80 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center"
+                    android:clickable="true"
+                    android:gravity="center_horizontal"
+                    android:onClick="notesClick"
                     android:orientation="vertical"
-                    android:onClick="notesClick">
+                    android:padding="20dp">
 
                     <ImageView
                         android:id="@+id/notesBtn"
                         android:layout_width="125dp"
                         android:layout_height="125dp"
                         android:background="@drawable/round_background"
-                        android:clickable="true"
                         android:src="@drawable/ic_launcher_foreground_notes"
                         android:tint="@color/dark_orange"
-                        android:translationZ="20dp"/>
+                        android:translationZ="20dp" />
+
                     <TextView
-                        android:layout_width="wrap_content"
+                        style="@style/purple_text_header"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:minHeight="125dp"
                         android:text="@string/notes"
-                        style="@style/purple_text_header"/>
+                        android:textAlignment="center" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center"
+                    android:clickable="true"
+                    android:gravity="center_horizontal"
+                    android:onClick="loanCalculatorClick"
                     android:orientation="vertical"
-                    android:onClick="loanCalculatorClick">
+                    android:padding="20dp">
 
                     <ImageView
                         android:id="@+id/loanCalculatorBtn"
+                        android:layout_width="125dp"
+                        android:layout_height="125dp"
+                        android:background="@drawable/round_background"
+                        android:src="@drawable/ic_launcher_foreground_loan_calculator"
+                        android:tint="@color/dark_orange"
+                        android:translationZ="20dp" />
+
+                    <TextView
+                        style="@style/purple_text_header"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:minHeight="125dp"
+                        android:text="@string/loanCal"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center_horizontal"
+                android:onClick="portfolioClick"
+                android:orientation="horizontal"
+                android:padding="20dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingBottom="60dp">
+
+                    <ImageView
+                        android:id="@+id/portfolioBtn"
                         android:layout_width="125dp"
                         android:layout_height="125dp"
                         android:background="@drawable/round_background"
@@ -137,46 +190,11 @@
                         android:translationZ="20dp" />
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/loanCal"
-                        style="@style/purple_text_header"/>
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                android:onClick="portfolioClick">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:paddingBottom="30dp">
-
-                    <ImageView
-                        android:id="@+id/portfolioBtn"
-                        android:translationZ="20dp"
-                        android:layout_width="125dp"
-                        android:layout_height="125dp"
-                        android:background="@drawable/round_background"
-                        android:clickable="true"
-                        android:src="@drawable/ic_launcher_foreground_loan_calculator"
-                        android:tint="@color/dark_orange"/>
-
-                    <TextView
+                        style="@style/purple_text_header"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/portfolio"
-                        style="@style/purple_text_header"/>
+                        android:textAlignment="viewStart" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
