--- a/Stockers/app/src/main/res/values/header_style.xml
+++ b/Stockers/app/src/main/res/values/header_style.xml
@@ -5,6 +5,7 @@
         <item name="android:fontFamily">casual</item>
         <item name="android:textSize">30sp</item>
         <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:padding">10dp</item>
     </style>
 
 </resources>
