Add styling to the notes page and add horizontal layout for the loan calculator Change the styling of notes so that is works better with the rest of the app. To do this I made the background orange and didn't make the background span the entire screen, instead it spans a portion of the screen and is centered

--- a/Stockers/app/src/main/res/layout/article_layout.xml
+++ b/Stockers/app/src/main/res/layout/article_layout.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical"
     android:layout_marginBottom="30dp"
     android:padding="10dp"
-    android:background="@color/gray_purple">
+    android:background="@color/orange"
+    android:translationZ="10dp">
 
     <TextView
         android:layout_width="match_parent"
