--- a/Stockers/app/src/main/res/layout/activity_currency_exchange.xml
+++ b/Stockers/app/src/main/res/layout/activity_currency_exchange.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".CurrecnyExchange.CurrencyExchangeActivity">
+    tools:context=".CurrecnyExchange.CurrencyExchangeActivity"
+    android:layout_marginLeft="4dp">
 
 
     <LinearLayout
@@ -67,8 +68,5 @@
             android:textSize="@dimen/CurrencyExchangeText" />
 
     </LinearLayout>
-
     </LinearLayout>
-
-
 </LinearLayout>
